[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GunTower.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.329412, 0.215686, 0.682353, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.65098, 0.356863, 0.117647, 1 )
metallic = 0.55
metallic_specular = 0.33

[node name="GunTower" type="Spatial"]
script = ExtResource( 1 )

[node name="Base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Gun1" type="MeshInstance" parent="Base"]
transform = Transform( 1.56798, 0, 0, 0, 0.224213, 0, 0, 0, 0.26, 0.316923, 0.773319, 1.30857 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="autoTargeting" type="Label" parent="."]
margin_left = 14.3624
margin_top = 567.665
margin_right = 100.362
margin_bottom = 581.665
text = "autoTargeting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zAngle" type="Label" parent="."]
margin_left = 9.3327
margin_top = 459.015
margin_right = 95.3327
margin_bottom = 473.015
text = "zAngle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yAngle" type="Label" parent="."]
margin_left = 9.3327
margin_top = 436.854
margin_right = 95.3327
margin_bottom = 450.854
text = "yAngle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="targetPosition" type="Label" parent="."]
margin_left = 13.844
margin_top = 532.847
margin_right = 116.844
margin_bottom = 546.847
text = "Target position: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selfPosition" type="Label" parent="."]
margin_left = 14.2621
margin_top = 507.782
margin_right = 117.262
margin_bottom = 521.782
text = "selfPosition"
__meta__ = {
"_edit_use_anchors_": false
}
